service_lingua.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: linguaapi
  name: linguaapi
spec:
  type: NodePort
  ports: 
   - targetPort: 9080
     port: 9080
     nodePort: 30001
  selector:
     name: linguaapi
