service_mongo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongoservice
  name: mongoservice
spec:
  type: NodePort
  ports: 
   - targetPort: 27017
     port: 27017
     nodePort: 31000
  selector:
     name: mongo
