gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: lingua-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 9080
      name: http
      protocol: HTTP
    hosts:
    - "lingua.core"
